Add utils for JDBC. Add database connection.

--- a/.classpath
+++ b/.classpath
@@ -2,5 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path=""/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
+	<classpathentry kind="lib" path="/opt/ibm/db2/V10.5/java/db2jcc.jar"/>
+	<classpathentry kind="lib" path="/opt/ibm/db2/V10.5/java/db2jcc_license_cu.jar"/>
 	<classpathentry kind="output" path=""/>
 </classpath>
